# FastAPI-Templates

./: .gitignore  Makefile  README.md  SUMMARY.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_directory}}/: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
{{cookiecutter.project_directory}}/.github/actions/setup-environment/: action.yaml
{{cookiecutter.project_directory}}/.github/workflows/: ci.yaml  release.yaml  test.yaml
{{cookiecutter.project_directory}}/migrations/models/: 0_20240216154554_init.py
{{cookiecutter.project_directory}}/scripts/: entrypoint.sh  init.sh
{{cookiecutter.project_directory}}/src/: config.py  doc_generator.py  main.py  pre_start.py
{{cookiecutter.project_directory}}/src/pkg/: containers.py  db.py  dependencies.py  middleware.py  models.py  repositories.py  schema.py  services.py  utils.py
{{cookiecutter.project_directory}}/src/router/: __init__.py  health.py
{{cookiecutter.project_directory}}/src/worker/: __init__.py  tasks.py
{{cookiecutter.project_directory}}/tests/: conftest.py
{{cookiecutter.project_directory}}/tests/router/: test_health.py
{{cookiecutter.project_directory}}/tests/services/: test_auth_service.py  test_db_service.py
{{cookiecutter.project_directory}}/tests/worker/: test_tasks.py
